--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.14.0",
         "illuminate/contracts": "^8.0|^9.0|^10.0.0",
-        "filament/forms": "^2.0|^3.0"
+        "filament/forms": "^3.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
