FIX Обновление ColorPlugin

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "editorjs-drag-drop": "^1.1.13",
     "editorjs-style": "^3.0.3",
     "editorjs-table": "^1.4.10",
-    "editorjs-text-color-plugin": "^2.0.4",
+    "editorjs-text-color-plugin": "git+https://github.com/dariox64/editorjs-text-color-plugin.git",
     "editorjs-tooltip": "^1.2.2",
     "editorjs-undo": "^1.0.1",
     "laravel-mix": "^6.0.49",
@@ -32,7 +32,7 @@
     "@editorjs/attaches": "^1.3.0",
     "@editorjs/code": "^2.8.0",
     "@editorjs/delimiter": "^1.3.0",
-    "@editorjs/editorjs": "^2.28.2",
+    "@editorjs/editorjs": "^2.30.8",
     "@editorjs/embed": "^2.5.3",
     "@editorjs/header": "^2.7.0",
     "@editorjs/image": "^2.8.1",
