FIX Замена ColorPlugin

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "editorjs-drag-drop": "^1.1.13",
     "editorjs-style": "^3.0.3",
     "editorjs-table": "^1.4.10",
-    "editorjs-text-color-plugin": "git+https://github.com/dariox64/editorjs-text-color-plugin.git",
     "editorjs-tooltip": "^1.2.2",
     "editorjs-undo": "^1.0.1",
     "laravel-mix": "^6.0.49",
@@ -32,7 +31,7 @@
     "@editorjs/attaches": "^1.3.0",
     "@editorjs/code": "^2.8.0",
     "@editorjs/delimiter": "^1.3.0",
-    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/editorjs": "^2.25.0",
     "@editorjs/embed": "^2.5.3",
     "@editorjs/header": "^2.7.0",
     "@editorjs/image": "^2.8.1",
@@ -41,6 +40,7 @@
     "@editorjs/paragraph": "^2.9.0",
     "@editorjs/underline": "^1.1.0",
     "@sotaproject/strikethrough": "^1.0.1",
+    "color-plugin-tool-editorjs": "^1.0.2",
     "editorjs-alert": "^1.1.3",
     "editorjs-mermaid": "^1.0.0",
     "editorjs-text-alignment-blocktune": "^1.0.3"
